Add caching in api
