# src/routes.ts
@@ -9,6 +9,8 @@ import photoRoutes from "./routes/Content/photo.routes";
 import planRoutes from "./routes/Content/plan.routes";
 import vlogRoutes from "./routes/Content/vlog.routes";
 import postRoutes from "./routes/Content/post.routes";
+import followerRoutes from "./routes/Content/follower.routes";
+import upvoteRoutes from "./routes/Content/upvote.routes";
 
 router.use("/user", userRoutes);
 router.use("/auth", authRoutes);
@@ -17,6 +19,8 @@ router.use("/photos", photoRoutes);
 router.use("/plans", planRoutes);
 router.use("/vlogs", vlogRoutes);
 router.use("/posts", postRoutes);
+router.use("/followers", followerRoutes);
+router.use("/upvotes", upvoteRoutes);
 router.get("/", (req, res) => {
   res.send("Server is running!");
 });
